fix: used gap instead of margin

--- a/day2/navbar.css
+++ b/day2/navbar.css
@@ -19,10 +19,12 @@ header {
   display: flex;
   flex: 1;
   justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
-.navbar nav a {
+/* .navbar nav a {
   margin: 4px;
-}
+} */
 .navbar:hover {
   background-color: aqua;
 }
